--- a/scss/style-index.scss
+++ b/scss/style-index.scss
@@ -1,38 +1,42 @@
-@import url(../css/nullstyle.css);
-body{
-background-color: white;
-}
-.container {
-    display: flex;
-    flex-wrap: wrap;
-    text-align: center;
-}
-.item {
-    padding: 10px;
-    margin: 10px;
-    border: 1px solid #000;
-}
+@import url(./nullstyle.css);
 
-.block_title {
+.block_title{
+    padding: 10px;
     border-bottom: 2px solid black;
-    padding: 10px 50px;
     display: flex;
     justify-content: space-between;
-    .title {
+   
+    .title{
         font-size: 30px;
+        font-weight: 600;
+        align-self: center;
     }
-    .button {
-
-        .add,
-        .mass__delete {
-            padding: 10px 20px;
-            font-size: 20px;
+}
+.container{
+    padding: 10px;
+    .item{
+        display: inline-block;
+        padding: 20px;
+        margin: 10px;
+        border: 2px solid #000;
+        li{
+            text-align: center;
+            margin-bottom: 10px;
+           &:first-child{
+               text-align: left;
+           }
         }
     }
 }
-.mass__delete{
+button{
+    padding: 10px;
+    margin: 10px;
     border: 1px solid #000;
+    font-size: 20px;
+    box-shadow: 3px 3px 2px black;
+}
+.mass__delete{
     position: absolute;
-    top: 5%;
-    left: 85%;
+    top: 2%;
+    left: 50%;
 }
